[gd_scene load_steps=4 format=3 uid="uid://dqud3y2bh3pjo"]

[ext_resource type="FontFile" uid="uid://ctyf3x2t8jp8h" path="res://resources/fonts/font_1.tres" id="1_2i3sn"]
[ext_resource type="Script" path="res://scenes/ui/game_over/game_over_screen.gd" id="1_kgpsa"]
[ext_resource type="FontFile" uid="uid://ctswaiyaxvbc7" path="res://assets/user_interface/fonts/font_1.ttf" id="3_t3c5y"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgpsa")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.141176, 0.270588, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_constants/separation = 10

[node name="GameOverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("1_2i3sn")
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2i3sn")
theme_override_font_sizes/font_size = 8
text = "Score: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_2i3sn")
theme_override_font_sizes/font_size = 8
text = "High Score: 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t3c5y")
theme_override_font_sizes/font_size = 8
text = "Retry"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t3c5y")
theme_override_font_sizes/font_size = 8
text = "Quit"

[node name="GameOverDelay" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="GameOverDelay" to="." method="_on_game_over_delay_timeout"]
